# wai

crates/wasmer/: Cargo.toml
